platter-compiler-sveltejs/static/python/tests/syntax_programs/invalid_tests/test_script_73.platter
start() {
    piece[] of arr = [12,11,13,5,6];
    piece of n = size(arr);

    pass(i=1; i+=1; i<n) {
        piece of key = arr[i];
        piece of j = i-(1);

        repeat(j>=0 and arr[j] > key) {
            arr[j+1] = arr[j];
            j -= 1;
        }
        arr[j+1] = key;
    }
    serve [arr];
}
